--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
     </dependency>
 
 
+
     <!-- 文件下载 -->
     <dependency>
       <groupId>commons-io</groupId>
@@ -83,6 +84,20 @@
       <groupId>com.google.zxing</groupId>
       <artifactId>javase</artifactId>
       <version>3.3.0</version>
+    </dependency>
+
+    <!-- JSON 转XML 互转的包 -->
+<!--    <dependency>-->
+<!--      <groupId>net.sf.json-lib</groupId>-->
+<!--      <artifactId>json-lib</artifactId>-->
+<!--      <version>2.4</version>-->
+<!--      <classifier>jdk13</classifier>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
     </dependency>
 
   </dependencies>
